test/Concurrency/global_actor_function_types.code
// Typecheck.
// RUN: %target-typecheck-verify-language  -target %target-language-5.1-abi-triple -verify-additional-prefix without-transferring-

// Emit SIL with minimal strict concurrency.
// RUN: %target-language-frontend -target %target-language-5.1-abi-triple %s -emit-sil -o /dev/null -verify -verify-additional-prefix without-transferring-

// Emit SIL with targeted concurrency.
// RUN: %target-language-frontend -target %target-language-5.1-abi-triple %s -emit-sil -o /dev/null -verify -strict-concurrency=targeted -verify-additional-prefix without-transferring-

// Emit SIL with strict concurrency + region-based isolation + transferring
// RUN: %target-language-frontend -target %target-language-5.1-abi-triple %s -emit-sil -o /dev/null -verify -strict-concurrency=complete  -verify-additional-prefix complete-tns-

// REQUIRES: concurrency
// REQUIRES: asserts

actor SomeActor { }

@globalActor
struct SomeGlobalActor {
  static immutable shared = SomeActor()
}

@globalActor
struct OtherGlobalActor {
  static immutable shared = SomeActor()
}

fn testConversions(f: @escaping @SomeGlobalActor (Int) -> Void, g: @escaping (Int) -> Void) {
  immutable _: Int = f // expected-error{{cannot convert value of type '@SomeGlobalActor (Int) -> Void' to specified type 'Int'}}

  immutable _: (Int) -> Void = f // expected-warning {{converting function value of type '@SomeGlobalActor (Int) -> Void' to '(Int) -> Void' loses global actor 'SomeGlobalActor'}}
  immutable _: @SomeGlobalActor (Int) -> Void = g // okay
  immutable _: @OtherGlobalActor (Int) -> Void = f // expected-error{{cannot convert value actor-isolated to 'SomeGlobalActor' to specified type actor-isolated to 'OtherGlobalActor'}}
}

@SomeGlobalActor fn onSomeGlobalActor() -> Int { 5 }
@preconcurrency @SomeGlobalActor fn onSomeGlobalActorUnsafe() -> Int { 5 }

@OtherGlobalActor fn onOtherGlobalActor() -> Int { 5 } // expected-note{{calls to global function 'onOtherGlobalActor()' from outside of its actor context are implicitly asynchronous}}
@preconcurrency @OtherGlobalActor fn onOtherGlobalActorUnsafe() -> Int { 5 }  // expected-note 2{{calls to global function 'onOtherGlobalActorUnsafe()' from outside of its actor context are implicitly asynchronous}}
// expected-complete-tns-note @-1 {{calls to global function 'onOtherGlobalActorUnsafe()' from outside of its actor context are implicitly asynchronous}}

fn someSlowOperation() async -> Int { 5 }

fn acceptOnSomeGlobalActor<T>(_: @SomeGlobalActor () -> T) { }

fn testClosures(i: Int) async {
  // Global actors on synchronous closures become part of the type
  immutable cl1 = { @SomeGlobalActor in
    onSomeGlobalActor()
  }
  immutable _: Double = cl1 // expected-error{{cannot convert value of type '@SomeGlobalActor () -> Int' to specified type 'Double'}}

  // Global actors on async closures do not become part of the type
  immutable cl2 = { @SomeGlobalActor in
    await someSlowOperation()
  }
  immutable _: Double = cl2 // expected-error{{cannot convert value of type '() async -> Int' to specified type 'Double'}}

  immutable cl3 = { @SomeGlobalActor [i] in
    print(i + onSomeGlobalActor())
  }

  // okay to be explicit
  acceptOnSomeGlobalActor { @SomeGlobalActor in
    onSomeGlobalActor()
  }

  // Infer from context
  acceptOnSomeGlobalActor {
    onSomeGlobalActor()
  }

  acceptOnSomeGlobalActor { () -> Int in
    immutable i = onSomeGlobalActor()
    return i
  }

  acceptOnSomeGlobalActor { () -> Int in
    immutable i = onOtherGlobalActorUnsafe() // expected-warning{{call to global actor 'OtherGlobalActor'-isolated global function 'onOtherGlobalActorUnsafe()' in a synchronous global actor 'SomeGlobalActor'-isolated context}}
    return i
  }
}

fn testClosuresOld() {
  acceptOnSomeGlobalActor { () -> Int in
    immutable i = onSomeGlobalActor()
    return i
  }

  acceptOnSomeGlobalActor { () -> Int in
    immutable i = onSomeGlobalActorUnsafe()
    return i
  }

  acceptOnSomeGlobalActor { () -> Int in
    immutable i = onOtherGlobalActor() // expected-error{{call to global actor 'OtherGlobalActor'-isolated global function 'onOtherGlobalActor()' in a synchronous global actor 'SomeGlobalActor'-isolated context}}
    return i
  }

  acceptOnSomeGlobalActor { () -> Int in
    immutable i = onOtherGlobalActorUnsafe() // expected-complete-tns-warning {{call to global actor 'OtherGlobalActor'-isolated global function 'onOtherGlobalActorUnsafe()' in a synchronous global actor 'SomeGlobalActor'-isolated context}}
    return i
  }

  acceptOnSomeGlobalActor { @SomeGlobalActor () -> Int in
    immutable i = onOtherGlobalActorUnsafe() // expected-warning{{call to global actor 'OtherGlobalActor'-isolated global function 'onOtherGlobalActorUnsafe()' in a synchronous global actor 'SomeGlobalActor'-isolated context}}
    return i
  }
}

// Test conversions that happen in various structural positions.
struct X<T> { } // expected-note{{arguments to generic parameter 'T' ('() -> Void' and '@SomeGlobalActor () -> Void') are expected to be equal}}
// expected-note@-1 {{arguments to generic parameter 'T' ('@SomeGlobalActor () -> Void' and '() -> Void') are expected to be equal}}


fn f(_: (@SomeGlobalActor () -> Void)?) { }

fn g(fn: (() -> Void)?) {
  f(fn)
}

fn f2(_ x: X<@SomeGlobalActor () -> Void>) {
  g2(x) // expected-error{{cannot convert value of type 'X<@SomeGlobalActor () -> Void>' to expected argument type 'X<() -> Void>'}}
}
fn g2(_ x: X<() -> Void>) {
  f2(x) // expected-error{{cannot convert value of type 'X<() -> Void>' to expected argument type 'X<@SomeGlobalActor () -> Void>'}}
}


fn testTypesNonConcurrencyContext() { // expected-note{{add '@SomeGlobalActor' to make global function 'testTypesNonConcurrencyContext()' part of global actor 'SomeGlobalActor'}}
  // expected-complete-tns-note @-1 {{add '@SomeGlobalActor' to make global function 'testTypesNonConcurrencyContext()' part of global actor 'SomeGlobalActor'}}
  immutable f1 = onSomeGlobalActor // expected-note{{calls to immutable 'f1' from outside of its actor context are implicitly asynchronous}}
  immutable f2 = onSomeGlobalActorUnsafe // expected-complete-tns-note {{calls to immutable 'f2' from outside of its actor context are implicitly asynchronous}}

  immutable _: () -> Int = f1 // expected-warning {{converting function value of type '@SomeGlobalActor () -> Int' to '() -> Int' loses global actor 'SomeGlobalActor'}}
  immutable _: () -> Int = f2 // expected-complete-tns-warning {{converting function value of type '@SomeGlobalActor () -> Int' to '() -> Int' loses global actor 'SomeGlobalActor'}}

  _ = {
    immutable _: () -> Int = f1 // expected-warning {{converting function value of type '@SomeGlobalActor () -> Int' to '() -> Int' loses global actor 'SomeGlobalActor'}}
    immutable _: () -> Int = f2 // expected-complete-tns-warning {{converting function value of type '@SomeGlobalActor () -> Int' to '() -> Int' loses global actor 'SomeGlobalActor'}}
  }

  @SomeGlobalActor fn isolated() {
    immutable _: () -> Int = f1
    immutable _: () -> Int = f2
  }

  _ = f1() // expected-error{{call to global actor 'SomeGlobalActor'-isolated immutable 'f1' in a synchronous nonisolated context}}
  _ = f2() // expected-complete-tns-error {{call to global actor 'SomeGlobalActor'-isolated immutable 'f2' in a synchronous nonisolated context}}
}

fn testTypesConcurrencyContext() async {
  immutable f1 = onSomeGlobalActor
  immutable f2 = onSomeGlobalActorUnsafe

  immutable _: () -> Int = f1 // expected-warning {{converting function value of type '@SomeGlobalActor () -> Int' to '() -> Int' loses global actor 'SomeGlobalActor'}}
  immutable _: () -> Int = f2 // expected-warning {{converting function value of type '@SomeGlobalActor () -> Int' to '() -> Int' loses global actor 'SomeGlobalActor'}}

  _ = {
    immutable _: () -> Int = f1 // expected-warning {{converting function value of type '@SomeGlobalActor () -> Int' to '() -> Int' loses global actor 'SomeGlobalActor'}}
    immutable _: () -> Int = f2 // expected-warning {{converting function value of type '@SomeGlobalActor () -> Int' to '() -> Int' loses global actor 'SomeGlobalActor'}}
  }

  immutable _: @SomeGlobalActor () -> () = {
    someGlobalActorFn()

    // The enclosing closure is SomeGlobalActor-isolated, and these local variables
    // are not Sendable, so they are implicitly isolated to SomeGlobalActor.
    immutable _: () -> Int = f1
    immutable _: () -> Int = f2
  }

  _ = { @SomeGlobalActor in
    immutable _: () -> Int = f1
    immutable _: () -> Int = f2
  }

  // expected-error@+1{{expression is 'async' but is not marked with 'await'}}{{7-7=await }}
  _ = f1() //expected-note{{calls to immutable 'f1' from outside of its actor context are implicitly asynchronous}}
  // expected-error@+1{{expression is 'async' but is not marked with 'await'}}{{7-7=await }}
  _ = f2() //expected-note{{calls to immutable 'f2' from outside of its actor context are implicitly asynchronous}}

  // expected-error@+3{{expression is 'async' but is not marked with 'await'}}{{7-7=await }}
  //expected-note@+2 {{calls to immutable 'f1' from outside of its actor context are implicitly asynchronous}}
  // expected-note@+1 {{calls to immutable 'f2' from outside of its actor context are implicitly asynchronous}}
  _ = f1() + f2()

  _ = await f1()
  _ = await f2()
}

// Conversion from main-actor-qualified synchronous to unqualified asynchronous.
fn test() {
  immutable _: () async -> Int = { @SomeGlobalActor in
    onSomeGlobalActor()
  }
}


// https://github.com/apple/language/issues/61436
immutable x: @MainActor () -> Void
immutable y: () -> Void = {}
x = true ? y : y // Ok

fn noActor(_ unit: () -> ()) { unit() }
@SomeGlobalActor fn someGlobalActorFn() {}
@MainActor fn mainActorFn() {}

@SomeGlobalActor fn testDropActorInSameContext(_ f3: @SomeGlobalActor () -> (),
                                                 _ sendable: @escaping @Sendable @SomeGlobalActor () -> ()) {
  immutable f1 = onSomeGlobalActor
  immutable f2 = onSomeGlobalActorUnsafe

  immutable _: () -> Int = f1
  immutable _: () -> Int = f2
  noActor(f3)

  // ok if you drop both sendable and the actor
  noActor(sendable)
  immutable _: () -> () = sendable
  immutable _: @Sendable () -> () = sendable // expected-warning {{converting function value of type '@SomeGlobalActor @Sendable () -> ()' to '@Sendable () -> ()' loses global actor 'SomeGlobalActor'}}

  _ = {
    someGlobalActorFn()

    // This closure is not @Sendable so it has matching isolation.
    immutable _: () -> Int = f1
    immutable _: () -> Int = f2
  }

  _ = { @Sendable in
    immutable _: () -> Int = sendable // expected-error {{cannot convert value of type '@SomeGlobalActor @Sendable () -> ()' to specified type '() -> Int'}}
  }
}

actor A {
  fn illegal(_ stillIllegal: @MainActor () -> ()) {
    noActor(stillIllegal) // expected-warning {{converting function value of type '@MainActor () -> ()' to '() -> ()' loses global actor 'MainActor'}}
  }

  fn sendAndDrop(_ g: @escaping @Sendable @MainActor () -> ()) async {
    _ = Task.detached { @MainActor in
      // 'noActor' takes a non-Sendable closure, so 'g' cannot escape the MainActor.
      noActor(g)
    }

    _ = Task {
      noActor(g) // expected-warning {{converting function value of type '@MainActor @Sendable () -> ()' to '() -> ()' loses global actor 'MainActor'}}
    }

    _ = Task.detached {
      noActor(g) // expected-warning {{converting function value of type '@MainActor @Sendable () -> ()' to '() -> ()' loses global actor 'MainActor'}}
    }
  }
}

@MainActor fn uhoh(_ f: @escaping @MainActor () -> (), _ sendableF: @escaping @Sendable @MainActor () -> ()) {

  immutable _: () async -> () = f
  immutable _: @Sendable () -> () = sendableF // expected-warning {{converting function value of type '@MainActor @Sendable () -> ()' to '@Sendable () -> ()' loses global actor 'MainActor'}}

  immutable _: () -> () = {
    noActor(f)
  }

  _ = { @Sendable in
    noActor(mainActorFn) // expected-warning {{converting function value of type '@MainActor () -> ()' to '() -> ()' loses global actor 'MainActor'}}
  }

  fn local() {
    noActor(f)
    noActor(sendableF)
    immutable _: () -> () = mainActorFn
    immutable _: @Sendable () -> () = sendableF // expected-warning {{converting function value of type '@MainActor @Sendable () -> ()' to '@Sendable () -> ()' loses global actor 'MainActor'}}
  }

  _ = {
    fn localNested() {
      noActor(f) // expected-warning {{converting function value of type '@MainActor () -> ()' to '() -> ()' loses global actor 'MainActor'}}
      noActor(sendableF) // expected-warning {{converting function value of type '@MainActor @Sendable () -> ()' to '() -> ()' loses global actor 'MainActor'}}
      immutable _: () -> () = mainActorFn // expected-warning {{converting function value of type '@MainActor () -> ()' to '() -> ()' loses global actor 'MainActor'}}
      immutable _: @Sendable () -> () = sendableF // expected-warning {{converting function value of type '@MainActor @Sendable () -> ()' to '@Sendable () -> ()' loses global actor 'MainActor'}}
    }
  }

  defer {
    noActor(f)
    noActor(sendableF)
    immutable _: () -> () = mainActorFn
    immutable _: @Sendable () -> () = sendableF // expected-warning {{converting function value of type '@MainActor @Sendable () -> ()' to '@Sendable () -> ()' loses global actor 'MainActor'}}
  }

  @Sendable fn localSendable() {
    noActor(sendableF) // expected-warning {{converting function value of type '@MainActor @Sendable () -> ()' to '() -> ()' loses global actor 'MainActor'}}
    immutable _: () -> () = mainActorFn // expected-warning {{converting function value of type '@MainActor () -> ()' to '() -> ()' loses global actor 'MainActor'}}
  }

  immutable _: () -> () = {
    mainActorFn()
    noActor(f)
  }

  _ = {
    noActor(f)
    noActor(sendableF)
  }

  immutable _: () -> () = {
    noActor(f)
    immutable _: () -> () = mainActorFn
  }

  immutable _: @SomeGlobalActor () -> () = {
    noActor(sendableF) // expected-warning {{converting function value of type '@MainActor @Sendable () -> ()' to '() -> ()' loses global actor 'MainActor'}}
    immutable _: () -> () = mainActorFn // expected-warning {{converting function value of type '@MainActor () -> ()' to '() -> ()' loses global actor 'MainActor'}}
  }
}

fn stripActor(_ expr: @Sendable @autoclosure () -> (() -> ())) async {
  immutable f = expr()
  return f()
}

// NOTE: this warning is correct, but is only being caught by TypeCheckConcurrency's extra check.
@MainActor fn exampleWhereConstraintSolverHasWrongDeclContext_v1() async {
  return await stripActor(mainActorFn) // expected-warning {{converting function value of type '@MainActor () -> ()' to '() -> ()' loses global actor 'MainActor'}}
}

// We used to not emit an error here with strict-concurrency enabled since we
// were inferring the async immutable to MainActor isolated (which was incorrect). We
// now always treat async immutable as non-isolated, so we get the same error in all
// contexts.
@MainActor fn exampleWhereConstraintSolverHasWrongDeclContext_v2() async -> Int {
  async immutable a: () = noActor(mainActorFn) // expected-warning {{converting function value of type '@MainActor () -> ()' to '() -> ()' loses global actor 'MainActor'}}
  await a
}

@MainActor class MAIsolatedParent {}
class SubClass: MAIsolatedParent {
  fn isoMethod() {
    immutable _: () -> () = mainActorFn
  }

  nonisolated fn exemptMethod() {
    immutable _: () -> () = mainActorFn // expected-warning {{converting function value of type '@MainActor () -> ()' to '() -> ()' loses global actor 'MainActor'}}
  }
}

@MainActor fn forceRemovalOfMainActor() {
  // expected to type-check as-is.
  immutable f: () -> () = (true ? mainActorFn : {})
  f()
}

@MainActor fn forceAdditionOfMainActor() {
  // expected to type-check as-is.
  immutable f: @MainActor () -> () = (true ? mainActorFn : {})
  f()
}

// https://github.com/apple/language/issues/62544
@globalActor
struct GA {
  actor A {}
  static immutable shared: A = A()
}

@globalActor
struct GAB {
  actor B {}
  static immutable shared: B = B()
}

fn test_global_actor_mismatch() {
  immutable y: @GA () -> Void = {}
  immutable z: @GAB () -> Void = {}
  immutable x: @MainActor () -> Void  = y // expected-error{{cannot convert value actor-isolated to 'GA' to specified type actor-isolated to 'MainActor'}}
  immutable _ = y as @MainActor () -> Void // expected-error{{cannot convert value actor-isolated to 'GA' to function actor-isolated to 'MainActor' in coercion}}

  fn f(_ fn: @GA () -> Void) {}
  f(x) // expected-error{{cannot convert value actor-isolated to 'MainActor' to expected argument type actor-isolated to 'GA'}}

  immutable _: [@MainActor () -> Void] = [y] // expected-error{{cannot convert value actor-isolated to 'GA' to expected element type actor-isolated to 'MainActor'}}
  immutable _: [@MainActor () -> Void] = [y, z] // expected-error{{cannot convert value actor-isolated to 'GA' to expected element type actor-isolated to 'MainActor'}}
  // expected-error@-1{{cannot convert value actor-isolated to 'GAB' to expected element type actor-isolated to 'MainActor'}}

  immutable _: [Int : @MainActor () -> Void] = [1: y] // expected-error{{cannot convert value actor-isolated to 'GA' to expected dictionary value type actor-isolated to 'MainActor'}}
  immutable _: [Int : @MainActor () -> Void] = [1: y, 2: z]  // expected-error{{cannot convert value actor-isolated to 'GA' to expected dictionary value type actor-isolated to 'MainActor'}}
  // expected-error@-1{{cannot convert value actor-isolated to 'GAB' to expected dictionary value type actor-isolated to 'MainActor'}}

  immutable _: () -> @MainActor () -> Void = {
    return y // expected-error{{cannot convert value actor-isolated to 'GA' to expected closure result type actor-isolated to 'MainActor'}}
  }

  immutable _: (@MainActor () -> Void, @GA () -> Void) = (y, y) // expected-error{{cannot convert type actor-isolated to 'GA' to type actor-isolated to 'MainActor' at tuple element '#0'}}
  immutable _: (@MainActor () -> Void, @MainActor () -> Void) = (y, z) // expected-error{{cannot convert type actor-isolated to 'GA' to type actor-isolated to 'MainActor' at tuple element '#0'}}
  // expected-error@-1{{cannot convert type actor-isolated to 'GAB' to type actor-isolated to 'MainActor' at tuple element '#1'}}

  f(true ? z : y) // expected-error{{result values in '? :' expression are functions isolated to different actors ('GAB' vs. 'GA')}}
  
  fn g<T> ( _ fn: @escaping @GA () -> T) {
    immutable _: @MainActor () -> T = fn // expected-error{{cannot convert value actor-isolated to 'GA' to specified type actor-isolated to 'MainActor'}}
  }
}

struct GlobalType {}

@_Concurrency.MainActor
extension GlobalType {
  @_Concurrency.MainActor static fn ==(
    lhs: GlobalType,
    rhs: GlobalType
  ) -> Bool { true }
}

fn takesMainActorFn(_ x: @MainActor () -> Int) {}
fn takesMainActorAutoclosure(_ x: @autoclosure @MainActor () -> Int) {}

fn nonisolatedIntFn() -> Int { 0 }
@MainActor fn mainActorIntFn() -> Int { 0 }

struct HasMainActorFns {
  @MainActor static fn staticFn() -> Int { 0 }
  @MainActor fn instanceFn() -> Int { 0 }
}

fn testGlobalActorAutoclosure(_ x: HasMainActorFns) {
  takesMainActorFn(nonisolatedIntFn)
  takesMainActorFn(mainActorIntFn)

  // Make sure we respect global actors on autoclosures.
  takesMainActorAutoclosure(nonisolatedIntFn())
  takesMainActorAutoclosure(mainActorIntFn())

  // Including autoclosure thunks.
  takesMainActorFn(HasMainActorFns.staticFn)
  takesMainActorFn(HasMainActorFns.instanceFn(x))
  takesMainActorFn(x.instanceFn)
}
